--- a/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
@@ -1,6 +1,8 @@
 ﻿<div id="~_Tabs" class="s-DialogContent">
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Accounts.EntitySingular"}}</span></a></li>
+        <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.AccountAttachments.EntityPlural"}}</span></a></li>
+
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
     </ul>
     <div id="~_TabInfo" class="tab-pane s-TabInfo">
@@ -14,6 +16,11 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div id="~_TabAttachments" class="tab-pane s-TabAttachments">
+
+        <div id="~_AttachmentsPropertyGrid"></div>
+        <div class="clear"></div>
     </div>
     <div id="~_TabNotes" class="tab-pane s-TabNotes">
     </div>
