Added products db table and migration and page and so on #10

--- a/PGMS.Web/Modules/Erp/Products/Erp.ProductsDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Products/Erp.ProductsDialog.Template.html
@@ -1,7 +1,6 @@
 ﻿<div id="~_Tabs" class="s-DialogContent">
     <ul>
-        <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Suppliers.EntitySingular"}}</span></a></li>
-        <li><a href="#~_TabProducts"><span>{{text:"Db.Erp.Products.EntityPlural"}}</span></a></li>
+        <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Products.EntitySingular"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
     </ul>
@@ -17,11 +16,7 @@
             </form>
         </div>
     </div>
-    <div id="~_TabProducts" class="tab-pane s-TabProducts">
 
-        <div id="~_ProductsPropertyGrid"></div>
-        <div class="clear"></div>
-    </div>
     <div id="~_TabNotes" class="tab-pane s-TabNotes">
     </div>
 </div>
