Added orders to accounts page #6

--- a/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
@@ -1,10 +1,14 @@
 ﻿<div id="~_Tabs" class="s-DialogContent">
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Accounts.EntitySingular"}}</span></a></li>
+        <li><a href="#~_TabOrders"><span>{{text:"Db.Erp.Orders.EntityPlural"}}</span></a></li>
         <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.AccountAttachments.EntityPlural"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
     </ul>
+    
+
+
     <div id="~_TabInfo" class="tab-pane s-TabInfo">
         <div id="~_Toolbar" class="s-DialogToolbar">
         </div>
@@ -17,6 +21,12 @@
             </form>
         </div>
     </div>
+    <div id="~_TabOrders" class="tab-pane s-TabOrders">
+
+        <div id="~_OrdersPropertyGrid"></div>
+        <div class="clear"></div>
+    </div>
+
     <div id="~_TabAttachments" class="tab-pane s-TabAttachments">
 
         <div id="~_AttachmentsPropertyGrid"></div>
