Added outside orders to account page #6

--- a/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Accounts/Erp.AccountsDialog.Template.html
@@ -2,6 +2,7 @@
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Accounts.EntitySingular"}}</span></a></li>
         <li><a href="#~_TabOrders"><span>{{text:"Db.Erp.Orders.EntityPlural"}}</span></a></li>
+        <li><a href="#~_TabOutsideOrders"><span>{{text:"Db.Erp.OutsideOrders.EntityPlural"}}</span></a></li>
         <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.AccountAttachments.EntityPlural"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
@@ -24,6 +25,11 @@
     <div id="~_TabOrders" class="tab-pane s-TabOrders">
 
         <div id="~_OrdersPropertyGrid"></div>
+        <div class="clear"></div>
+    </div>
+    <div id="~_TabOutsideOrders" class="tab-pane s-TabOutsideOrders">
+
+        <div id="~_OutsideOrdersPropertyGrid"></div>
         <div class="clear"></div>
     </div>
 
