Added outside orders attachments

--- a/PGMS.Web/Modules/Erp/OutsideOrders/Erp.OutsideOrdersDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/OutsideOrders/Erp.OutsideOrdersDialog.Template.html
@@ -1,6 +1,7 @@
 ﻿<div id="~_Tabs" class="s-DialogContent">
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.OrderDetails.EntitySingular"}}</span></a></li>
+        <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.OutsideOrderAttachments.EntityPlural"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
     </ul>
@@ -15,6 +16,11 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div id="~_TabAttachments" class="tab-pane s-TabAttachments">
+
+        <div id="~_AttachmentsPropertyGrid"></div>
+        <div class="clear"></div>
     </div>
     <div id="~_TabNotes" class="tab-pane s-TabNotes">
     </div>
