Added expenses to orders and fixed small bug in columns in expenses page

--- a/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
@@ -4,6 +4,7 @@
         <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.OrderAttachments.EntityPlural"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
+        <li><a href="#~_TabExpenses"><span>{{text:"Db.Erp.Expenses.EntityPlural"}}</span></a></li>
     </ul>
     <div id="~_TabInfo" class="tab-pane s-TabInfo">
         <div id="~_Toolbar" class="s-DialogToolbar">
@@ -23,5 +24,10 @@
         <div class="clear"></div>
     </div>
     <div id="~_TabNotes" class="tab-pane s-TabNotes">
+    </div>
+    <div id="~_TabExpenses" class="tab-pane s-TabExpenses">
+
+        <div id="~_ExpensesPropertyGrid"></div>
+        <div class="clear"></div>
     </div>
 </div>
