Added new fields Account and WithVat  in expenses, added quick search for account name, phone number, email, Added functionality when payment is made from outside order or order, account is set automaticly #31

--- a/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
@@ -1,6 +1,6 @@
 ﻿<div id="~_Tabs" class="s-DialogContent">
     <ul>
-        <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Budgets.EntitySingular"}}</span></a></li>
+        <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Orders.EntitySingular"}}</span></a></li>
         <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.OrderAttachments.EntityPlural"}}</span></a></li>
 
         <li><a href="#~_TabNotes"><span>{{text:"Db.Erp.Note.EntityPlural"}}</span></a></li>
