Added button „Update“ on each tab in dialogs for orders, Accounts, Budgets, Outside orders, Products and expenses fixed #42

--- a/PGMS.Web/Modules/Erp/OrderDetails/Erp.OrderDetailsDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/OrderDetails/Erp.OrderDetailsDialog.Template.html
@@ -1,4 +1,6 @@
-﻿<div id="~_Tabs" class="s-DialogContent">
+﻿<div id="~_Toolbar" class="s-DialogToolbar">
+</div>
+<div id="~_Tabs" class="s-DialogContent">
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.OrderDetails.EntitySingular"}}</span></a></li>
 
