--- a/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
+++ b/PGMS.Web/Modules/Erp/Orders/Erp.OrdersDialog.Template.html
@@ -1,4 +1,6 @@
-﻿<div id="~_Tabs" class="s-DialogContent">
+﻿<div id="~_Toolbar" class="s-DialogToolbar">
+</div>
+<div id="~_Tabs" class="s-DialogContent">
     <ul>
         <li><a href="#~_TabInfo"><span>{{text:"Db.Erp.Orders.EntitySingular"}}</span></a></li>
         <li><a href="#~_TabAttachments"><span>{{text:"Db.Erp.OrderAttachments.EntityPlural"}}</span></a></li>
